// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgramListPage correctly renders the loading page 1`] = `
Array [
  <div
    className="position-absolute"
  >
    <a
      className="skip-nav-link sr-only sr-only-focusable btn btn-primary px-2 py-1 mt-3 ml-2"
      href="#content"
    >
      Skip to main content
    </a>
  </div>,
  <main
    id="content"
  >
    <div
      className="container my-4"
    >
      <div
        className="d-flex justify-content-center align-items-center"
      >
        <div
          className="spinner-border text-primary"
          role="status"
        >
          <span
            className="sr-only"
          >
            loading program enrollments
          </span>
        </div>
      </div>
    </div>
  </main>,
  <footer
    aria-label="edX Home"
    className="footer d-flex border-top py-3 px-4"
    role="contentinfo"
  >
    <div
      className="container d-flex"
    >
      <a
        aria-label="edX Home"
        className="d-block mb-3"
        href="https://open.edx.org"
      >
        <img
          alt="Powered by Open edX"
          src={
            Object {
              "process": [Function],
            }
          }
          style={
            Object {
              "maxWidth": 150,
            }
          }
        />
      </a>
      <div
        className="flex-grow-1"
      />
    </div>
  </footer>,
]
`;

exports[`ProgramListPage renders fetching program error page when there are issues fetching the user programs 1`] = `
Array [
  <div
    className="position-absolute"
  >
    <a
      className="skip-nav-link sr-only sr-only-focusable btn btn-primary px-2 py-1 mt-3 ml-2"
      href="#content"
    >
      Skip to main content
    </a>
  </div>,
  <main
    id="content"
  >
    <div
      className="container my-4"
    >
      <div
        className="alert fade alert-danger show"
        hidden={false}
        role="alert"
      >
        <div
          className="alert-dialog"
        >
          <div
            className="d-flex"
          >
            <div>
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-exclamation-triangle fa-w-18 mr-2"
                data-icon="exclamation-triangle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 576 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </div>
            <div>
              An error occurred while fetching your program enrollments. Please try again later.
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>,
  <footer
    aria-label="edX Home"
    className="footer d-flex border-top py-3 px-4"
    role="contentinfo"
  >
    <div
      className="container d-flex"
    >
      <a
        aria-label="edX Home"
        className="d-block mb-3"
        href="https://open.edx.org"
      >
        <img
          alt="Powered by Open edX"
          src={
            Object {
              "process": [Function],
            }
          }
          style={
            Object {
              "maxWidth": 150,
            }
          }
        />
      </a>
      <div
        className="flex-grow-1"
      />
    </div>
  </footer>,
]
`;
